Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@i915_selftest@perf@migrate - dmesg-fail - i915/intel_migrate_perf_selftests: perf_copy_blt failed with error -22
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_11395/re-dg2-12/igt@i915_selftest@perf@migrate.html
<7> [128.532043] [drm:drm_client_modeset_probe] connector 284 enabled? no
<7> [128.532072] [drm:drm_client_firmware_config.isra.10] Not using firmware configuration
<7> [128.532081] [drm:drm_client_modeset_probe] picking CRTCs for 16384x16384 config
<7> [128.532097] i915 0000:03:00.0: [drm:__drm_fb_helper_initial_config_and_unlock [drm_kms_helper]] test CRTC 0 primary plane
<7> [128.532106] i915 0000:03:00.0: [drm:__drm_fb_helper_initial_config_and_unlock [drm_kms_helper]] test CRTC 1 primary plane
<7> [128.532113] i915 0000:03:00.0: [drm:__drm_fb_helper_initial_config_and_unlock [drm_kms_helper]] test CRTC 2 primary plane
<7> [128.532120] i915 0000:03:00.0: [drm:__drm_fb_helper_initial_config_and_unlock [drm_kms_helper]] test CRTC 3 primary plane
<6> [128.532127] i915 0000:03:00.0: [drm] Cannot find any crtc or sizes
<6> [128.593627] bcs0: 65536 KiB fill: 5466 MiB/s
<6> [128.603406] i915: Running intel_migrate_perf_selftests/perf_copy_blt
<3> [128.612295] i915/intel_migrate_perf_selftests: perf_copy_blt failed with error -22
<7> [128.612757] intel_gt_set_wedged called from intel_gt_set_wedged_on_fini+0x15/0x40 [i915]
<7> [128.657256] i915 0000:03:00.0: [drm:drm_client_release] drm_fb_helper
<4> [128.696824] i915: probe of 0000:03:00.0 failed with error -22